[REST Compatible API] Route refactoring (#69573) (#70109)
Makes `Route`s  `RestApiVersion` -aware. Refactors how `Route`s are constructed in the case of deprecation or replacement of routes.