@@ -8,6 +8,7 @@ package org.elasticsearch.xpack.security.rest.action.privilege;
 
 import org.elasticsearch.client.node.NodeClient;
 import org.elasticsearch.common.Strings;
+import org.elasticsearch.common.RestApiVersion;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.set.Sets;
 import org.elasticsearch.common.xcontent.XContentBuilder;
@@ -43,19 +44,14 @@ public class RestGetPrivilegesAction extends SecurityBaseRestHandler {
 
     @Override
     public List<Route> routes() {
-        return Collections.emptyList();
-    }
-
-    @Override
-    public List<ReplacedRoute> replacedRoutes() {
-        // TODO: remove deprecated endpoint in 8.0.0
-        return Collections.unmodifiableList(Arrays.asList(
-            new ReplacedRoute(GET, "/_security/privilege/", GET, "/_xpack/security/privilege/"),
-            new ReplacedRoute(GET, "/_security/privilege/{application}",
-                GET, "/_xpack/security/privilege/{application}"),
-            new ReplacedRoute(GET, "/_security/privilege/{application}/{privilege}",
-                GET, "/_xpack/security/privilege/{application}/{privilege}")
-        ));
+        return org.elasticsearch.common.collect.List.of(
+            Route.builder(GET, "/_security/privilege/")
+                .replaces(GET, "/_xpack/security/privilege/", RestApiVersion.V_7).build(),
+            Route.builder(GET, "/_security/privilege/{application}")
+                .replaces(GET, "/_xpack/security/privilege/{application}", RestApiVersion.V_7).build(),
+            Route.builder(GET, "/_security/privilege/{application}/{privilege}")
+                .replaces(GET, "/_xpack/security/privilege/{application}/{privilege}", RestApiVersion.V_7).build()
+        );
     }
 
     @Override
@@ -98,9 +94,9 @@ public class RestGetPrivilegesAction extends SecurityBaseRestHandler {
 
     static Map<String, Set<ApplicationPrivilegeDescriptor>> groupByApplicationName(ApplicationPrivilegeDescriptor[] privileges) {
         return Arrays.stream(privileges).collect(Collectors.toMap(
-                ApplicationPrivilegeDescriptor::getApplication,
-                Collections::singleton,
-                Sets::union
+            ApplicationPrivilegeDescriptor::getApplication,
+            Collections::singleton,
+            Sets::union
         ));
     }
 }
