@@ -10,6 +10,7 @@ import org.elasticsearch.ElasticsearchSecurityException;
 import org.elasticsearch.client.node.NodeClient;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.collect.Tuple;
+import org.elasticsearch.common.RestApiVersion;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.xcontent.ToXContent;
 import org.elasticsearch.common.xcontent.XContentBuilder;
@@ -29,8 +30,6 @@ import org.elasticsearch.xpack.core.security.user.User;
 import org.elasticsearch.xpack.security.rest.action.SecurityBaseRestHandler;
 
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import static org.elasticsearch.rest.RestRequest.Method.GET;
@@ -51,22 +50,16 @@ public class RestHasPrivilegesAction extends SecurityBaseRestHandler {
 
     @Override
     public List<Route> routes() {
-        return Collections.emptyList();
-    }
-
-    @Override
-    public List<ReplacedRoute> replacedRoutes() {
-        // TODO: remove deprecated endpoint in 8.0.0
-        return Collections.unmodifiableList(Arrays.asList(
-            new ReplacedRoute(GET, "/_security/user/{username}/_has_privileges",
-                GET, "/_xpack/security/user/{username}/_has_privileges"),
-            new ReplacedRoute(POST, "/_security/user/{username}/_has_privileges",
-                POST, "/_xpack/security/user/{username}/_has_privileges"),
-            new ReplacedRoute(GET, "/_security/user/_has_privileges",
-                GET, "/_xpack/security/user/_has_privileges"),
-            new ReplacedRoute(POST, "/_security/user/_has_privileges",
-                POST, "/_xpack/security/user/_has_privileges")
-        ));
+        return org.elasticsearch.common.collect.List.of(
+            Route.builder(GET, "/_security/user/{username}/_has_privileges")
+                .replaces(GET, "/_xpack/security/user/{username}/_has_privileges", RestApiVersion.V_7).build(),
+            Route.builder(POST, "/_security/user/{username}/_has_privileges")
+                .replaces(POST, "/_xpack/security/user/{username}/_has_privileges", RestApiVersion.V_7).build(),
+            Route.builder(GET, "/_security/user/_has_privileges")
+                .replaces(GET, "/_xpack/security/user/_has_privileges", RestApiVersion.V_7).build(),
+            Route.builder(POST, "/_security/user/_has_privileges")
+                .replaces(POST, "/_xpack/security/user/_has_privileges", RestApiVersion.V_7).build()
+        );
     }
 
     @Override
@@ -83,7 +76,9 @@ public class RestHasPrivilegesAction extends SecurityBaseRestHandler {
         final Tuple<XContentType, BytesReference> content = request.contentOrSourceParam();
         final String username = getUsername(request);
         if (username == null) {
-            return restChannel -> { throw new ElasticsearchSecurityException("there is no authenticated user"); };
+            return restChannel -> {
+                throw new ElasticsearchSecurityException("there is no authenticated user");
+            };
         }
         HasPrivilegesRequestBuilder requestBuilder = new SecurityClient(client).prepareHasPrivileges(username, content.v2(), content.v1());
         return channel -> requestBuilder.execute(new RestBuilderListener<HasPrivilegesResponse>(channel) {
